--- a/Views/EditDebtorWindow.xaml
+++ b/Views/EditDebtorWindow.xaml
@@ -27,6 +27,10 @@
         <conv:StringEqualsConverter       x:Key="StringEqualsConverter"/>
         <conv:StringEqualsToVisibilityConverter x:Key="StringEqualsToVisibilityConverter"/>
         <conv:BoolToValueConverter        x:Key="BoolToColorConverter"/>
+        <conv:PassportSeriesConverter     x:Key="PassportSeriesConverter"/>
+        <conv:PassportNumberConverter     x:Key="PassportNumberConverter"/>
+        <conv:DivisionCodeConverter       x:Key="DivisionCodeConverter"/>
+        <conv:CurrencyConverter           x:Key="CurrencyConverter"/>
 
         <!-- Styles -->
         <Style x:Key="HeaderTextBlock" TargetType="TextBlock">
@@ -245,7 +249,7 @@
                 Background="White"
                 BorderBrush="#DEE2E6"
                 BorderThickness="0,0,0,1">
-            <TextBlock Text="Добавление нового должника"
+            <TextBlock Text="Редактирование должника"
                        Margin="25,10"
                        FontSize="22"
                        FontWeight="Bold"
@@ -321,11 +325,11 @@
                                 </Grid.ColumnDefinitions>
                                 <StackPanel Grid.Column="0" Margin="0,0,15,0">
                                     <TextBlock Text="Серия" Style="{StaticResource FormTextBlock}"/>
-                                    <TextBox Text="{Binding PassportSeries, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource FormTextBox}"/>
+                                    <TextBox Text="{Binding PassportSeries, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource PassportSeriesConverter}}" Style="{StaticResource FormTextBox}" MaxLength="4"/>
                                 </StackPanel>
                                 <StackPanel Grid.Column="1" Margin="0,0,15,0">
                                     <TextBlock Text="Номер" Style="{StaticResource FormTextBlock}"/>
-                                    <TextBox Text="{Binding PassportNumber, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource FormTextBox}"/>
+                                    <TextBox Text="{Binding PassportNumber, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource PassportNumberConverter}}" Style="{StaticResource FormTextBox}" MaxLength="6"/>
                                 </StackPanel>
                                 <StackPanel Grid.Column="2">
                                     <TextBlock Text="Дата выдачи" Style="{StaticResource FormTextBlock}"/>
@@ -343,7 +347,7 @@
                                 </StackPanel>
                                 <StackPanel Grid.Column="1">
                                     <TextBlock Text="Код подразделения" Style="{StaticResource FormTextBlock}"/>
-                                    <TextBox Text="{Binding PassportDivisionCode, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource FormTextBox}"/>
+                                    <TextBox Text="{Binding PassportDivisionCode, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource DivisionCodeConverter}}" Style="{StaticResource FormTextBox}" MaxLength="7"/>
                                 </StackPanel>
                             </Grid>
                             <TextBlock Text="Адреса" Style="{StaticResource HeaderTextBlock}"/>
@@ -379,20 +383,10 @@
                                 </StackPanel>
                             </Grid>
                             <TextBlock Text="Финансовые условия" Style="{StaticResource HeaderTextBlock}"/>
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="*"/>
-                                </Grid.ColumnDefinitions>
-                                <StackPanel Grid.Column="0" Margin="0,0,15,0">
-                                    <TextBlock Style="{StaticResource FormTextBlock}"><Run Language="ru-ru" Text="Общая "/><Run Language="ru-ru" Text="с"/><Run Text="умма договора (руб.)"/></TextBlock>
-                                    <TextBox Text="{Binding TotalCost}" Style="{StaticResource FormTextBox}"/>
-                                </StackPanel>
-                                <Button Grid.Column="1" Content="Сумма прописью" Command="{Binding CalculateTotalWordsCommand}" Style="{StaticResource SecondaryButton}" VerticalAlignment="Bottom" Margin="0,0,0,10" Height="36" Width="150"/>
-                            </Grid>
-
-                            <TextBlock Text="Сумма прописью" Style="{StaticResource FormTextBlock}"/>
-                            <TextBox Text="{Binding TotalCostWords}" Style="{StaticResource FormTextBox}" TextWrapping="Wrap" AcceptsReturn="True" Height="60" Padding="10"/>
+                            <StackPanel Margin="0,0,15,0">
+                                <TextBlock Style="{StaticResource FormTextBlock}"><Run Language="ru-ru" Text="Общая "/><Run Language="ru-ru" Text="с"/><Run Text="умма договора (руб.)"/></TextBlock>
+                                <TextBox Text="{Binding TotalCost, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}"/>
+                            </StackPanel>
 
                             <Grid Margin="0,10,0,0">
                                 <Grid.ColumnDefinitions>
@@ -400,29 +394,34 @@
                                     <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
                                 <StackPanel Grid.Column="0" Margin="0,0,15,0">
-                                    <TextBlock Style="{StaticResource FormTextBlock}"><Run Text="Сумма "/><Run Language="ru-ru" Text="юридических "/><Run Text="услуг (руб.)"/></TextBlock>
-                                    <TextBox Text="{Binding ServicesAmount}" Style="{StaticResource FormTextBox}"/>
+                                    <TextBlock Style="{StaticResource FormTextBlock}"><Run Text="Обязательные расходы (руб.)"/></TextBlock>
+                                    <TextBox Text="{Binding MandatoryExpenses, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}"/>
                                 </StackPanel>
                                 <StackPanel Grid.Column="1">
-                                    <TextBlock Style="{StaticResource FormTextBlock}"><Run Text="Сумма "/><Run Language="ru-ru" Text="обязательных "/><Run Text="расходов (руб.)"/></TextBlock>
-                                    <TextBox Text="{Binding ExpensesAmount}" Style="{StaticResource FormTextBox}"/>
+                                    <TextBlock Style="{StaticResource FormTextBlock}"><Run Text="Вознаграждение фин. управляющего (руб.)"/></TextBlock>
+                                    <TextBox Text="{Binding ManagerFee, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}"/>
                                 </StackPanel>
                             </Grid>
 
-                            <Grid Margin="10,10,0,0">
+                            <Grid Margin="0,10,0,0">
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="395*"/>
-                                    <ColumnDefinition Width="398*"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
-                                <StackPanel Grid.Column="0" Margin="-12,0,27,0">
-                                    <TextBlock Text="Вознаграждение фин. управляющего (руб.)" Style="{StaticResource FormTextBlock}"/>
-                                    <TextBox Text="{Binding ManagerFee}" Style="{StaticResource FormTextBox}"/>
+                                <StackPanel Grid.Column="0" Margin="0,0,15,0">
+                                    <TextBlock Style="{StaticResource FormTextBlock}"><Run Text="Прочие расходы (руб.)"/></TextBlock>
+                                    <TextBox Text="{Binding OtherExpenses, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}"/>
                                 </StackPanel>
-                                <StackPanel Grid.ColumnSpan="2" Margin="390,0,0,0">
-                                    <TextBlock Text="Прочие расходы (руб.)" Style="{StaticResource FormTextBlock}"/>
-                                    <TextBox Text="{Binding OtherExpenses}" Style="{StaticResource FormTextBox}"/>
+                                <StackPanel Grid.Column="1">
+                                    <TextBlock Style="{StaticResource FormTextBlock}"><Run Text="Сумма "/><Run Language="ru-ru" Text="юридических "/><Run Text="услуг (руб.)"/></TextBlock>
+                                    <TextBox Text="{Binding ServicesAmount, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}" IsReadOnly="True"/>
                                 </StackPanel>
                             </Grid>
+
+                            <StackPanel Margin="0,10,0,0">
+                                <TextBlock Style="{StaticResource FormTextBlock}"><Run Text="Общая сумма "/><Run Language="ru-ru" Text="расходов "/><Run Text="(руб.)"/></TextBlock>
+                                <TextBox Text="{Binding ExpensesAmount, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}" IsReadOnly="True"/>
+                            </StackPanel>
 
                             <TextBlock Text="Разбивка по этапам" Style="{StaticResource HeaderTextBlock}" Margin="0,20,0,10"/>
                             <Grid>
@@ -433,21 +432,21 @@
                                 </Grid.ColumnDefinitions>
                                 <StackPanel Grid.Column="0" Margin="0,0,10,0">
                                     <TextBlock Text="Этап 1 (руб.)" Style="{StaticResource FormTextBlock}"/>
-                                    <TextBox Text="{Binding Stage1Amount}" Style="{StaticResource FormTextBox}"/>
+                                    <TextBox Text="{Binding Stage1Amount, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}"/>
                                 </StackPanel>
                                 <StackPanel Grid.Column="1" Margin="0,0,10,0">
                                     <TextBlock Text="Этап 2 (руб.)" Style="{StaticResource FormTextBlock}"/>
-                                    <TextBox Text="{Binding Stage2Amount}" Style="{StaticResource FormTextBox}"/>
+                                    <TextBox Text="{Binding Stage2Amount, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}"/>
                                 </StackPanel>
                                 <StackPanel Grid.Column="2">
                                     <TextBlock Text="Этап 3 (руб.)" Style="{StaticResource FormTextBlock}"/>
-                                    <TextBox Text="{Binding Stage3Amount}" Style="{StaticResource FormTextBox}"/>
+                                    <TextBox Text="{Binding Stage3Amount, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}"/>
                                 </StackPanel>
                             </Grid>
 
                             <StackPanel Orientation="Horizontal" Margin="0,20,0,5">
                                 <TextBlock Text="Количество месяцев:" VerticalAlignment="Center" Margin="0,0,10,0"/>
-                                <TextBox Width="50" Text="{Binding ScheduleMonths}" Style="{StaticResource FormTextBox}"/>
+                                <TextBox Width="50" Text="{Binding ScheduleMonths, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource FormTextBox}"/>
                                 <Button Content="Сгенерировать" Command="{Binding GenerateScheduleCommand}" Margin="10,0,0,0" Style="{StaticResource SecondaryButton}"/>
                             </StackPanel>
                             <TextBlock Text="График платежей" Style="{StaticResource HeaderTextBlock}" Margin="0,10,0,5"/>
@@ -456,19 +455,14 @@
                                     <DataGridTextColumn Header="№" Binding="{Binding Stage}" Width="Auto"/>
                                     <DataGridTextColumn Header="Дата платежа" Binding="{Binding DueDate, StringFormat=dd.MM.yyyy}" Width="*"/>
                                     <DataGridTextColumn Header="Цель платежа" Binding="{Binding Description}" Width="*"/>
-                                    <DataGridTextColumn Header="Сумма платежа" Binding="{Binding Amount, StringFormat={}{0:N2}}" Width="*"/>
+                                    <DataGridTextColumn Header="Сумма платежа" Binding="{Binding Amount, StringFormat={}{0:F2}}" Width="*"/>
                                 </DataGrid.Columns>
                             </DataGrid>
 
-                            <Grid Margin="0,0,0,10">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*"/>
-                                </Grid.ColumnDefinitions>
-                                <StackPanel>
-                                    <TextBlock Text="Сумма по графику (руб.)" Style="{StaticResource FormTextBlock}"/>
-                                    <TextBox Text="{Binding ScheduleTotal}" Style="{StaticResource FormTextBox}" IsReadOnly="True"/>
-                                </StackPanel>
-                            </Grid>
+                            <StackPanel>
+                                <TextBlock Text="Сумма по графику (руб.)" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding ScheduleTotal, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}" IsReadOnly="True"/>
+                            </StackPanel>
                         </StackPanel>
                     </Grid>
                 </TabItem>
