--- a/Views/EditDebtorWindow.xaml
+++ b/Views/EditDebtorWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:bankrupt_piterjust.ViewModels"
         xmlns:conv="clr-namespace:bankrupt_piterjust.Converters"
+        xmlns:beh="clr-namespace:bankrupt_piterjust.Helpers"
         xmlns:local="clr-namespace:bankrupt_piterjust"
         mc:Ignorable="d"
         Title="Редактирование должника"
@@ -397,7 +398,7 @@
                             <TextBlock Text="Финансовые условия" Style="{StaticResource HeaderTextBlock}"/>
                             <StackPanel Margin="0,0,15,0">
                                 <TextBlock Style="{StaticResource FormTextBlock}"><Run Language="ru-ru" Text="Общая "/><Run Language="ru-ru" Text="с"/><Run Text="умма договора (руб.)"/></TextBlock>
-                                <TextBox Text="{Binding TotalCost, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}"/>
+                                <TextBox beh:CurrencyInputBehavior.IsEnabled="True" Text="{Binding TotalCost, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}"/>
                             </StackPanel>
 
                             <Grid Margin="0,10,0,0">
@@ -407,11 +408,11 @@
                                 </Grid.ColumnDefinitions>
                                 <StackPanel Grid.Column="0" Margin="0,0,15,0">
                                     <TextBlock Style="{StaticResource FormTextBlock}"><Run Text="Обязательные расходы (руб.)"/></TextBlock>
-                                    <TextBox Text="{Binding MandatoryExpenses, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}"/>
+                                    <TextBox beh:CurrencyInputBehavior.IsEnabled="True" Text="{Binding MandatoryExpenses, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}"/>
                                 </StackPanel>
                                 <StackPanel Grid.Column="1">
                                     <TextBlock Style="{StaticResource FormTextBlock}"><Run Text="Вознаграждение фин. управляющего (руб.)"/></TextBlock>
-                                    <TextBox Text="{Binding ManagerFee, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}"/>
+                                    <TextBox beh:CurrencyInputBehavior.IsEnabled="True" Text="{Binding ManagerFee, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}"/>
                                 </StackPanel>
                             </Grid>
 
@@ -422,17 +423,17 @@
                                 </Grid.ColumnDefinitions>
                                 <StackPanel Grid.Column="0" Margin="0,0,15,0">
                                     <TextBlock Style="{StaticResource FormTextBlock}"><Run Text="Прочие расходы (руб.)"/></TextBlock>
-                                    <TextBox Text="{Binding OtherExpenses, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}"/>
+                                    <TextBox beh:CurrencyInputBehavior.IsEnabled="True" Text="{Binding OtherExpenses, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}"/>
                                 </StackPanel>
                                 <StackPanel Grid.Column="1">
                                     <TextBlock Style="{StaticResource FormTextBlock}"><Run Text="Сумма "/><Run Language="ru-ru" Text="юридических "/><Run Text="услуг (руб.)"/></TextBlock>
-                                    <TextBox Text="{Binding ServicesAmount, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}" IsReadOnly="True"/>
+                                    <TextBox beh:CurrencyInputBehavior.IsEnabled="True" Text="{Binding ServicesAmount, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}" IsReadOnly="True"/>
                                 </StackPanel>
                             </Grid>
 
                             <StackPanel Margin="0,10,0,0">
                                 <TextBlock Style="{StaticResource FormTextBlock}"><Run Text="Общая сумма "/><Run Language="ru-ru" Text="расходов "/><Run Text="(руб.)"/></TextBlock>
-                                <TextBox Text="{Binding ExpensesAmount, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}" IsReadOnly="True"/>
+                                <TextBox beh:CurrencyInputBehavior.IsEnabled="True" Text="{Binding ExpensesAmount, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}" IsReadOnly="True"/>
                             </StackPanel>
 
                             <TextBlock Text="Разбивка по этапам" Style="{StaticResource HeaderTextBlock}" Margin="0,20,0,10"/>
@@ -444,15 +445,15 @@
                                 </Grid.ColumnDefinitions>
                                 <StackPanel Grid.Column="0" Margin="0,0,10,0">
                                     <TextBlock Text="Этап 1 (руб.)" Style="{StaticResource FormTextBlock}"/>
-                                    <TextBox Text="{Binding Stage1Amount, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}"/>
+                                    <TextBox beh:CurrencyInputBehavior.IsEnabled="True" Text="{Binding Stage1Amount, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}"/>
                                 </StackPanel>
                                 <StackPanel Grid.Column="1" Margin="0,0,10,0">
                                     <TextBlock Text="Этап 2 (руб.)" Style="{StaticResource FormTextBlock}"/>
-                                    <TextBox Text="{Binding Stage2Amount, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}"/>
+                                    <TextBox beh:CurrencyInputBehavior.IsEnabled="True" Text="{Binding Stage2Amount, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}"/>
                                 </StackPanel>
                                 <StackPanel Grid.Column="2">
                                     <TextBlock Text="Этап 3 (руб.)" Style="{StaticResource FormTextBlock}"/>
-                                    <TextBox Text="{Binding Stage3Amount, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}"/>
+                                    <TextBox beh:CurrencyInputBehavior.IsEnabled="True" Text="{Binding Stage3Amount, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}"/>
                                 </StackPanel>
                             </Grid>
 
@@ -473,7 +474,7 @@
 
                             <StackPanel>
                                 <TextBlock Text="Сумма по графику (руб.)" Style="{StaticResource FormTextBlock}"/>
-                                <TextBox Text="{Binding ScheduleTotal, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}" IsReadOnly="True"/>
+                                <TextBox beh:CurrencyInputBehavior.IsEnabled="True" Text="{Binding ScheduleTotal, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource FormTextBox}" IsReadOnly="True"/>
                             </StackPanel>
                         </StackPanel>
                     </Grid>
