--- a/Views/EditDebtorWindow.xaml
+++ b/Views/EditDebtorWindow.xaml
@@ -365,13 +365,76 @@
                             </Grid>
                             <TextBlock Text="Адреса" Style="{StaticResource HeaderTextBlock}"/>
                             <TextBlock Text="Адрес регистрации *" Style="{StaticResource FormTextBlock}"/>
-                            <TextBox Text="{Binding RegistrationAddress, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource FormTextBox}"/>
+                            <StackPanel>
+                                <TextBlock Text="Индекс" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding RegistrationAddress.PostalCode}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Страна" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding RegistrationAddress.Country}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Регион" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding RegistrationAddress.Region}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Район" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding RegistrationAddress.District}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Город" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding RegistrationAddress.City}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Нас. пункт" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding RegistrationAddress.Locality}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Улица" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding RegistrationAddress.Street}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Дом" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding RegistrationAddress.HouseNumber}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Корпус" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding RegistrationAddress.Building}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Квартира" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding RegistrationAddress.Apartment}" Style="{StaticResource FormTextBox}"/>
+                            </StackPanel>
                             <CheckBox Content="Адрес проживания совпадает с адресом регистрации" IsChecked="{Binding SameAsRegistration}" Style="{StaticResource FormCheckBox}"/>
                             <TextBlock Text="Адрес проживания" Style="{StaticResource FormTextBlock}" IsEnabled="{Binding SameAsRegistration, Converter={StaticResource BooleanToInverseConverter}}"/>
-                            <TextBox Text="{Binding ResidenceAddress, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource FormTextBox}" IsEnabled="{Binding SameAsRegistration, Converter={StaticResource BooleanToInverseConverter}}"/>
+                            <StackPanel IsEnabled="{Binding SameAsRegistration, Converter={StaticResource BooleanToInverseConverter}}">
+                                <TextBlock Text="Индекс" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding ResidenceAddress.PostalCode}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Страна" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding ResidenceAddress.Country}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Регион" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding ResidenceAddress.Region}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Район" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding ResidenceAddress.District}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Город" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding ResidenceAddress.City}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Нас. пункт" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding ResidenceAddress.Locality}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Улица" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding ResidenceAddress.Street}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Дом" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding ResidenceAddress.HouseNumber}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Корпус" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding ResidenceAddress.Building}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Квартира" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding ResidenceAddress.Apartment}" Style="{StaticResource FormTextBox}"/>
+                            </StackPanel>
                             <CheckBox Content="Почтовый адрес совпадает с адресом проживания" IsChecked="{Binding SameAsResidence}" Style="{StaticResource FormCheckBox}"/>
                             <TextBlock Text="Почтовый адрес" Style="{StaticResource FormTextBlock}" IsEnabled="{Binding SameAsResidence, Converter={StaticResource BooleanToInverseConverter}}"/>
-                            <TextBox Text="{Binding MailingAddress, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource FormTextBox}" IsEnabled="{Binding SameAsResidence, Converter={StaticResource BooleanToInverseConverter}}"/>
+                            <StackPanel IsEnabled="{Binding SameAsResidence, Converter={StaticResource BooleanToInverseConverter}}">
+                                <TextBlock Text="Индекс" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding MailingAddress.PostalCode}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Страна" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding MailingAddress.Country}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Регион" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding MailingAddress.Region}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Район" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding MailingAddress.District}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Город" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding MailingAddress.City}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Нас. пункт" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding MailingAddress.Locality}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Улица" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding MailingAddress.Street}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Дом" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding MailingAddress.HouseNumber}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Корпус" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding MailingAddress.Building}" Style="{StaticResource FormTextBox}"/>
+                                <TextBlock Text="Квартира" Style="{StaticResource FormTextBlock}"/>
+                                <TextBox Text="{Binding MailingAddress.Apartment}" Style="{StaticResource FormTextBox}"/>
+                            </StackPanel>
                         </StackPanel>
                     </Grid>
                 </TabItem>
